--- a/src/assets/variables.module.scss
+++ b/src/assets/variables.module.scss
@@ -2,10 +2,18 @@ $JET: #2f2f2f;
 $YELLOW-ORANGE: #ff9900;
 $BABY-POWDER: #f3f4f0;
 $WHITE: #fff;
+$PALE_ORANGE: #ffb94a;
+$DARK_GRAY: #818181;
+$GRAY: #bfbfbf;
+$LIGHT_GRAY: #d7d7d7;
 
 :export {
   JET: $JET;
   YELLOW-ORANGE: $YELLOW-ORANGE;
   BABY-POWDER: $BABY-POWDER;
   WHITE: $WHITE;
+  PALE_ORANGE: $PALE_ORANGE;
+  DARK_GRAY: $DARK_GRAY;
+  GRAY: $GRAY;
+  LIGHT_GRAY: $LIGHT_GRAY;
 }
