--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Jura&family=Readex+Pro:wght@300;400;500;600;700&display=swap');
-
-body{
-    background: #000;
+@import url("https://fonts.googleapis.com/css2?family=Jura&family=Readex+Pro:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@400;700&display=swap");
+body {
+  font-family: "Readex Pro", sans-serif;
 }
