--- a/src/ui/InputChecked/InputChecked.module.scss
+++ b/src/ui/InputChecked/InputChecked.module.scss
@@ -9,31 +9,35 @@
 
 label span::before{
     content: '';
-
+    background:url();
   position: absolute;
   top: 0;
   left: 0;
   z-index: 1;
-  border: 1px solid rgb(216, 216, 216);
   background: white;
-  border-radius: 50%;
    width: 16px;
    height: 16px; 
+   border-radius: 3px;
 }
 
 label span::after {
         content: "";
         position: absolute;
-        top: 2px;
-        left: 2px;
+        top: 0px;
+        border-radius: 3px;
+        left: 0px;
         z-index: 1;
-        background: rgb(216, 122, 0);
-        border-radius: 50%;
-        width: 14px;
-        height: 14px;
+        background: #FF9900;
+        width: 16px;
+        height: 16px;
         opacity: 0;
 }
 
-.input:checked +.labelRadio span:after{
+.input:checked +.labelChecked span:after{
     opacity: 1;
+}
+.check{
+    position: absolute;
+    color:white;
+    z-index: 1000;
 }
