--- a/src/ui/InputSearch/InputSearch.module.scss
+++ b/src/ui/InputSearch/InputSearch.module.scss
@@ -1,30 +1,30 @@
-
-.input{
-    background: white;
-    width: 320px;
-    height: 17px;
-    padding: 10px;
-    padding-left: 34px;
-    border: none;
-    outline: none;
-    border-radius: 6px;
+.input {
+  background: white;
+  width: 320px;
+  height: 30px;
+  padding: 10px;
+  padding-left: 34px;
+  border: none;
+  outline: none;
+  border-radius: 6px;
 }
-.input::placeholder{
-    color: rgb(194, 194, 194); 
-    font-family: 'Readex Pro'; 
+.input::placeholder {
+  color: rgb(194, 194, 194);
+  font-family: "Readex Pro";
 }
-.button{
-     background: none;
-     position: absolute;
-     border:none;
-     top: 8px;
-     left: 5px;
-
+.button {
+  background: none;
+  position: absolute;
+  border: none;
+  top: 8px;
+  left: 5px;
 }
-.inputBlock{
-    position: relative;
+.inputBlock {
+  position: relative;
+  display: flex;
+  align-items: center;
 }
-.searchIcon{
-    width: 15px;
-    height: 17px;
+.searchIcon {
+  width: 15px;
+  height: 17px;
 }
