--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Jura&family=Readex+Pro:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@400;700&display=swap");
 body {
+  margin: 0;
   font-family: "Readex Pro", sans-serif;
 }
 
