--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,11 +1,22 @@
 @import '../../assets/variables.module.scss';
 
 
+.content{
+    height: 100vh;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    background: url('../../assets/bg.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 .login{
+    
     width: 500px;
     height: 700px;
     background: #e1e1e1;
-    opacity: 0.8;
+    opacity: 0.95;
     
 }
 .wrapper{
