--- a/src/components/Profile/ProfileBlock.module.scss
+++ b/src/components/Profile/ProfileBlock.module.scss
@@ -1,7 +1,11 @@
 @import "/src/assets/variables.module.scss";
 
 .profile {
-  width: 800px;
+  margin-left: 0px;
+  margin-top: 18px;
+  padding: 20px 0px;
+  padding-top: 0px;
+  background-color: white;
   border-radius: 15px;
   .wrapper {
     margin: 15px;
@@ -40,16 +44,21 @@
 
     .followInformation {
       margin-left: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       .qwe {
         margin-left: 0;
       }
       .follow {
         margin-top: 20px;
         display: flex;
+        
 
         .followSection {
           margin-left: 10px;
-
+          
+          text-align: center;
           .numbers {
             font-size: 25px;
             font-weight: 600;
@@ -60,3 +69,4 @@
     }
   }
 }
+
