--- a/src/ui/Button/Button.module.scss
+++ b/src/ui/Button/Button.module.scss
@@ -41,7 +41,7 @@
   color: $JET;
   background-color: none;
   border: none;
-  //inherit
+ background-color: transparent;
 }
 .WithoutBorder {
   color: $PALE_ORANGE;
