--- a/src/ui/RecommendedBlog/RecommendedBlog.module.scss
+++ b/src/ui/RecommendedBlog/RecommendedBlog.module.scss
@@ -1,4 +1,7 @@
 @import '../../assets/variables.module.scss';
+.blog{
+    width: 400px;
+}
 .left{
     display: flex;
     align-items:center;
@@ -18,12 +21,12 @@
     color: rgb(148, 148, 148);;
 }
 .blogWrapper{
-    max-width: 290px;
+    max-width: 356px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background: white;
-    padding: 12px;
+    padding: 17px;
     border-radius:7px;
 }
 h1,h2,h3,h4,h5,h6,p{
