--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,3 +6,9 @@ body {
   font-family: "Readex Pro", sans-serif;
   background-color: #ecebeb;
 }
+.content {
+  background-color: #ecebeb;
+  max-width: 1440px;
+  margin: 0 auto;
+
+}
