--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -37,7 +37,7 @@ button {
 }
 .post {
   border-radius: 30px;
-  width: 750px;
+  max-width: 750px;
   height: auto;
   background: #ffffff;
   padding: 10px 0px;
