--- a/src/components/Posts/Posts.module.scss
+++ b/src/components/Posts/Posts.module.scss
@@ -2,3 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(500px, auto));
 }
+.tabs{
+  width: 66%;
+  margin-right: 20px;
+}
