--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,9 @@ body {
   font-family: "Readex Pro", sans-serif;
   background-color: #ecebeb;
 }
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
