--- a/src/ui/Button/Button.module.scss
+++ b/src/ui/Button/Button.module.scss
@@ -41,7 +41,8 @@
   color: $JET;
   background-color: none;
   border: none;
- background-color: transparent;
+  background-color: transparent;
+  margin-bottom: 10px;
 }
 .WithoutBorder {
   color: $PALE_ORANGE;
