--- a/src/components/Profile/ProfileBlock.module.scss
+++ b/src/components/Profile/ProfileBlock.module.scss
@@ -1,11 +1,12 @@
 @import "/src/assets/variables.module.scss";
 
 .profile {
-  max-width: 1200px;
-  border-radius: 15px;
   margin-left: 0px;
   margin-top: 18px;
+  padding: 20px 0px;
+  padding-top: 0px;
   background-color: white;
+  border-radius: 15px;
   .wrapper {
     margin: 15px;
   }
@@ -43,13 +44,21 @@
 
     .followInformation {
       margin-left: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .qwe {
+        margin-left: 0;
+      }
       .follow {
         margin-top: 20px;
         display: flex;
+        
 
         .followSection {
           margin-left: 10px;
-
+          
+          text-align: center;
           .numbers {
             font-size: 25px;
             font-weight: 600;
@@ -59,4 +68,55 @@
       }
     }
   }
+}
+
+
+@media screen and (max-width:980px) {
+  .profile{
+    margin-left: 10px;
+  }
+
+}
+@media screen and (max-width:800px) {
+  .infoFollow{
+   font-size: 14px;
+  }
+  .profile {
+    .profilePhoto{
+      top: 220px;
+      width: 70px;
+      height: 70px;
+      img{
+        width: 70px;
+        height: 70px;
+      }
+    }
+    .information{
+      .nickName,
+    .name {
+      margin-bottom: 10px;
+    }
+      .description {
+        font-size: 0.8rem;
+      }
+      h2{
+        font-size: 20px;
+      }
+      .followInformation{
+        button {
+          padding: 5px 10px;
+        }
+          .follow{
+      .followSection{
+        .numbers{
+          font-size: 20px;
+        }
+      }
+    }
+      }
+    
+    }
+    
+  }
+  
 }
