--- a/src/components/ProfileList/ProfileList.module.scss
+++ b/src/components/ProfileList/ProfileList.module.scss
@@ -10,8 +10,14 @@
   font-size: 20px;
   margin-bottom: 10px;
 }
-.profileList {
+.profileList{
   margin-top: 25px;
   max-width: 400px;
   width: 100%;
+}
+
+@media screen and (max-width:1100px) {
+  .profileList{
+    display: none;
+  }
 }
