--- a/src/ui/Button/Button.module.scss
+++ b/src/ui/Button/Button.module.scss
@@ -49,3 +49,22 @@
   border: none;
   background-color: none;
 }
+
+@media screen and (max-width:980px) {
+  .icon{
+  svg{
+ width: 25px;
+  height: 25px;
+  }
+ 
+}
+}
+@media screen and (max-width:800px) {
+  .icon{
+  svg{
+ width: 20px;
+  height: 20px;
+  }
+ 
+}
+}
