--- a/src/ui/InputSearch/InputSearch.module.scss
+++ b/src/ui/InputSearch/InputSearch.module.scss
@@ -1,3 +1,5 @@
+@import "../../assets/variables.module.scss";
+
 .input {
   background: white;
   width: 320px;
@@ -40,17 +42,33 @@
     height: 15px;
   }
 }
-@media screen and (max-width: 580px) {
+
+.inputHidden {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: $LIGHT_GRAY;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
   .input {
-    width: 180px;
-    padding: 5px;
-    padding-left: 30px;
+    display: none;
   }
 }
-@media screen and (max-width: 360px) {
-  .input {
-    width: 140px;
-    padding: 5px;
-    padding-left: 30px;
-  }
-}
+
+// @media (max-width: 720px) {
+//   .inputBlock {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     width: 40px;
+//     height: 40px;
+//     border-radius: 50%;
+//     background-color: $LIGHT_GRAY;
+//     cursor: pointer;
+//   }
+//   .input {
+//     display: none;
+//   }
+// }
