--- a/src/components/Profile/ProfileBlock.module.scss
+++ b/src/components/Profile/ProfileBlock.module.scss
@@ -5,6 +5,7 @@
   margin-top: 18px;
   padding: 20px 0px;
   padding-top: 0px;
+  position: relative;
   background-color: white;
   border-radius: 15px;
   .wrapper {
@@ -25,7 +26,7 @@
     border: 4px solid white;
     border-radius: 50%;
     display: inline-block;
-    top: 180px;
+    top: 100px;
   }
   .information {
     margin: 35px 0px;
@@ -70,6 +71,21 @@
   }
 }
 
+.editBg{
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: 50px;
+  top: 20px;
+}
+.editBg label{
+  width: 50px;
+  height: 50px;
+  padding: 0;
+  border-radius:0;
+background: none;
+
+}
 
 @media screen and (max-width:980px) {
   .profile{
@@ -83,7 +99,7 @@
   }
   .profile {
     .profilePhoto{
-      top: 220px;
+      top: 130px;
       width: 70px;
       height: 70px;
       img{
