--- a/src/ui/InputPassword/InputPassword.module.scss
+++ b/src/ui/InputPassword/InputPassword.module.scss
@@ -1,31 +1,35 @@
+@import "../../assets/variables.module.scss";
 
-
-.input{
-    background: white;
-    width: 400px;
-    height: 17px;
-    padding: 10px;
-    border: none;
-    outline: none;
-    border-radius: 6px;
+.input {
+  background: white;
+  width: 400px;
+  height: 17px;
+  padding: 10px;
+  border: none;
+  outline: none;
+  border-radius: 6px;
 }
 
-.BorderBlack{
-    border: 2.7px solid black
+.BorderBlack {
+  border: 2.7px solid black;
 }
-.BorderOrange{
-    border: 2.7px solid rgb(223, 128, 4)
+.BorderOrange {
+  border: 2.7px solid rgb(223, 128, 4);
 }
-.BorderRed{
-    border : 2.7px solid rgb(180, 1, 1)
+.BorderRed {
+  border: 2.7px solid rgb(180, 1, 1);
 }
-.BorderGray{
-    border : 2.7px solid rgb(124, 124, 124)
+.BorderGray {
+  border: 2.7px solid rgb(124, 124, 124);
 }
-.BorderWhite{
-    border : 2.7px solid rgb(255, 255, 255)
+.BorderWhite {
+  border: 2.7px solid rgb(255, 255, 255);
 }
-.input::placeholder{
-    color: rgb(156, 156, 156); 
-    font-family: 'Readex Pro'; 
+.input::placeholder {
+  color: rgb(156, 156, 156);
+  font-family: "Readex Pro";
+}
+
+.input:focus {
+  border-color: $PALE_ORANGE;
 }
