--- a/src/components/Profile/ProfileBlock.module.scss
+++ b/src/components/Profile/ProfileBlock.module.scss
@@ -12,6 +12,7 @@
     margin: 15px;
   }
   .background {
+    position: relative;
     width: 100%;
     height: 250px;
     border-top-left-radius: 15px;
@@ -54,11 +55,10 @@
       .follow {
         margin-top: 20px;
         display: flex;
-        
 
         .followSection {
           margin-left: 10px;
-          
+
           text-align: center;
           .numbers {
             font-size: 25px;
@@ -71,68 +71,63 @@
   }
 }
 
-.editBg{
+.editBg {
   position: absolute;
   width: 20px;
   height: 20px;
-  right: 50px;
-  top: 20px;
+  right: 70px;
+  bottom: 50px;
 }
-.editBg label{
+.editBg label {
   width: 50px;
   height: 50px;
   padding: 0;
-  border-radius:0;
-background: none;
-
+  border-radius: 0;
+  background: none;
 }
 
-@media screen and (max-width:980px) {
-  .profile{
+@media screen and (max-width: 980px) {
+  .profile {
     margin-left: 10px;
   }
-
 }
-@media screen and (max-width:800px) {
-  .infoFollow{
-   font-size: 14px;
+@media screen and (max-width: 800px) {
+  .infoFollow {
+    font-size: 14px;
   }
   .profile {
-    .profilePhoto{
+    .profilePhoto {
       top: 130px;
       width: 70px;
       height: 70px;
-      img{
+      img {
         width: 70px;
         height: 70px;
       }
     }
-    .information{
+    .information {
       .nickName,
-    .name {
-      margin-bottom: 10px;
-    }
+      .name {
+        margin-bottom: 10px;
+      }
       .description {
         font-size: 0.8rem;
       }
-      h2{
+      h2 {
         font-size: 20px;
       }
-      .followInformation{
+      .followInformation {
         button {
           padding: 5px 10px;
         }
-          .follow{
-      .followSection{
-        .numbers{
-          font-size: 20px;
+        .follow {
+          .followSection {
+            .numbers {
+              font-size: 20px;
+            }
+          }
         }
       }
     }
-      }
-    
-    }
-    
   }
-  
 }
