--- a/src/ui/InputSearch/InputSearch.module.scss
+++ b/src/ui/InputSearch/InputSearch.module.scss
@@ -31,6 +31,9 @@
   width: 15px;
   height: 17px;
 }
+.input:focus {
+  border: 1.5px solid $PALE_ORANGE;
+}
 
 @media screen and (max-width: 880px) {
   .input {
