--- a/src/pages/SignUp/SignUpForm.module.scss
+++ b/src/pages/SignUp/SignUpForm.module.scss
@@ -1,105 +1,87 @@
-@import '../../assets/variables.module.scss';
+@import "../../assets/variables.module.scss";
 
-
-.signUpForm{
-
-    height: 100vh;
-    display: flex;
-    align-items:center;
-    justify-content: center;
-    background: url('../../assets/bg.png');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+.signUpForm {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url("../../assets/bg.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.login{
-    width: 500px;
-    height: 700px;
-    background: #e1e1e1;
-    opacity: 0.95;
-    
+.login {
+  width: 500px;
+  height: 700px;
+  background: #e1e1e1;
+  opacity: 0.95;
 }
-.wrapper{
-    
-    padding: 30px 20px;
-    
+.wrapper {
+  padding: 30px 20px;
 
-    h3{
-        padding: 0;
-        margin: 0;
-        margin-bottom: 10px;
-    }
-
-
-
-}
-.inputEmail{
-    font-size: 14px;
-    color: rgb(32, 32, 32);
-    margin-bottom: 20px;
-}
-.inputPassword{
-    font-size: 14px;
-    color: rgb(32, 32, 32);
-    margin-bottom: 6px;
-}
-
-
-.logo{
-    width: 100%;
-    display: flex;
-    margin-bottom: 30px;
-    justify-content: center;
-    align-items: center;
-}
-
-.paragraf{
-
-    width: 400px;
+  h3 {
     padding: 0;
-    margin-top: 25px;
-    text-align: center;
-    font-size: 14px;
-    color: $DARK_GRAY;
-
-    span{
-
-        color: black;
-        font-weight: 600;
-
-    }
-
+    margin: 0;
+    margin-bottom: 10px;
+  }
+}
+.inputEmail {
+  font-size: 14px;
+  color: rgb(32, 32, 32);
+  margin-bottom: 20px;
+}
+.inputPassword {
+  font-size: 14px;
+  color: rgb(32, 32, 32);
+  margin-bottom: 6px;
 }
 
-.minimum{
-
-  
-    font-size: 14px;
-    color: $DARK_GRAY;
-
+.logo {
+  width: 100%;
+  display: flex;
+  margin-bottom: 30px;
+  justify-content: center;
+  align-items: center;
 }
 
-.formBtn{
+.paragraf {
+  width: 400px;
+  padding: 0;
+  margin-top: 25px;
+  text-align: center;
+  font-size: 14px;
+  color: $DARK_GRAY;
 
-    margin-top: 30px;
-    width: 420px;
-    background-color: $YELLOW-ORANGE;
-    font-size: 15px;
-    font-weight: 700;
-    color: white;
-    padding: 20px 25px;
-    border-radius: 25px;
-    border: none;
-
-}
-.signUp{
-    padding: 0;
-    margin: 30px;
-    text-align: center;
-    font-size: 15px;
+  span {
     color: black;
-    font-weight: 500;
-    span{
-        border-bottom: 1px solid black;
-    }
+    font-weight: 600;
+  }
+}
+
+.minimum {
+  font-size: 14px;
+  color: $DARK_GRAY;
+}
+
+.formBtn {
+  margin-top: 30px;
+  width: 420px;
+  background-color: $YELLOW-ORANGE;
+  font-size: 15px;
+  font-weight: 700;
+  color: white;
+  padding: 20px 25px;
+  border-radius: 25px;
+  border: none;
+}
+.signUp {
+  padding: 0;
+  margin: 30px;
+  text-align: center;
+  font-size: 15px;
+  color: black;
+  font-weight: 500;
+  span {
+    border-bottom: 1px solid black;
+  }
 }
